# vnpy_sinopac

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  release.py  requirements.txt  setup.cfg  setup.py  test_timestamp_fix.py
.github/workflows/: deploy.yml  deploy_publish_pypi.yml  publish-to-test-pypi.yml
script/: run.py
tests/: __init__.py  test_basic.py
vnpy_sinopac/: __init__.py
vnpy_sinopac/gateway/: sinopac_gateway.py
