[tool.poetry]
name = "vnpy_sinopac"
version = "0.0.0"
description = "The best trading API - Shioaji gateway with VNPY."
authors = ["ypochien"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
shioaji = "^0.3.4-alpha.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
black = "^22.1.0"
isort = "^5.10.1"

[tool.poetry.extras]
pipfile_deprecated_finder = ["pipreqs", "requirementslib", "pip-shims<=0.3.4"]
requirements_deprecated_finder = ["pipreqs", "pip-api"]
colors = ["colorama"]
plugins = ["setuptools"]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
format = "v{base}"

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"