[metadata]
name = vnpy_sinopac
version = 1.0
url = https://sinotrade.github.io/
license = MIT
author = ypochien
author_email = ypochien@gmail.com
description = Sinopac Securities - Shioaji api gateway for VeighNa quant trading framework.
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    quant
    quantitative
    investment
    trading
    algotrading
classifiers =
    Development Status :: 5 - Production/Stable
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Office/Business :: Financial :: Investment
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: MIT License
    Natural Language :: Chinese (Simplified)

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    shioaji
    importlib_metadata
    wmi

[options.package_data]
* = *.dll, *.so, *.pyd