[metadata]
name = vnpy_sinopac
version = 1.0.5
url = https://github.com/ypochien/vnpy_sinopac
license = MIT
author = ypochien
author_email = ypochien@gmail.com
description = Sinopac Securities - Shioaji api gateway for VeighNa quant trading framework.
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    quant
    quantitative
    investment
    trading
    algotrading
platforms= any
project_urls =
    Documentation = https://sinotrade.github.io/
    Release notes = https://sinotrade.github.io/release/
    Funding = https://sjapi.tw
    Source = https://github.com/ypochien/vnpy_sinopac

classifiers =
    Development Status :: 4 - Beta
    Operating System :: Microsoft :: Windows
    Operating System :: Unix
    Operating System :: POSIX
    Operating System :: MacOS
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Office/Business :: Financial :: Investment
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: MIT License
    Natural Language :: Chinese (Traditional)

[options]
packages = find:
include_package_data = True
zip_safe = False
setup_requires = setuptools-git-versioning
install_requires =
    shioaji
    importlib_metadata
    wmi

[options.package_data]
* = *.dll, *.so, *.pyd